添加新功能

--- a/src/main/resources/s/otablemeta.html
+++ b/src/main/resources/s/otablemeta.html
@@ -5,8 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
- <div id="main" style="height:1000px"></div>
- <script src="http://echarts.baidu.com/build/dist/echarts-all.js"></script>
+ <div id="main" style="height:600px"></div>
+ <script src="https://cdn.bootcss.com/echarts/2.2.7/echarts-all.js"></script>
  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
  
  <script>
@@ -77,7 +77,7 @@
              series : [
                  {
                      type:'force',
-                     name : "Col",
+                     name : "Tbl",
                      ribbonType: false,
                      categories : [
                          {
